app/main/default/objects/sf_tfs__Organization__c/sf_tfs__Organization__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Default_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__OrganizationUsers__c</fullName>
        <label>OrganizationUsers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Organization_Users__c</fullName>
        <label>Organization Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Organization__c</fullName>
        <externalId>true</externalId>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <label>Organization</label>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>