app/main/default/objects/sf_tfs__Organization__c/fields/sf_tfs__Default_Organization__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Default_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Organization</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>