app/main/default/objects/sf_tfs__Organization__c/fields/sf_tfs__OrganizationUsers__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__OrganizationUsers__c</fullName>
        <label>OrganizationUsers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>